Fixed major bugs causing BSOD
Had a  issue where the hook driver i was using will cause BSOD and for some reason i could not debug this so i changed drivers to use a IOCTL driver i made a while back and tbh its so much smoother over 20hrs of testing and no BSOD, this will require you to delete the old services via CMD as admin typing in "sc delete GigabyteDriver" and "sc delete Hookdriver" then run the program and you will be fine!

--- a/Alani-NU/Alani NU/Alani NU.vcxproj.filters
+++ b/Alani-NU/Alani NU/Alani NU.vcxproj.filters
@@ -63,9 +63,6 @@
     <ClCompile Include="src\dse\disable dse.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="src\mem\memory.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\entity\local.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
@@ -160,7 +157,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <None Include="HookDriver.sys" />
-    <None Include="gdrv.sys" />
+    <None Include="GigabyteDriver.sys" />
+    <None Include="IOCTLDriver.sys" />
   </ItemGroup>
 </Project>
