--- a/Alani-NU/Alani NU/Alani NU.vcxproj
+++ b/Alani-NU/Alani NU/Alani NU.vcxproj
@@ -153,7 +153,6 @@
     <ClCompile Include="src\entity\local.cpp" />
     <ClCompile Include="src\hacks\rcs.cpp" />
     <ClCompile Include="src\entity\wentity.cpp" />
-    <ClCompile Include="src\mem\memory.cpp" />
     <ClCompile Include="src\overlay\overlay.cpp" />
     <ClCompile Include="src\core\main.cpp" />
     <ClCompile Include="src\math\vector.cpp" />
@@ -189,8 +188,8 @@
     <ClInclude Include="src\math\vector.hpp" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="gdrv.sys" />
-    <None Include="HookDriver.sys" />
+    <None Include="GigabyteDriver.sys" />
+    <None Include="IOCTLDriver.sys" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
