--- a/Alani-NU/Alani NU/Alani NU.vcxproj.filters
+++ b/Alani-NU/Alani NU/Alani NU.vcxproj.filters
@@ -69,6 +69,9 @@
     <ClCompile Include="src\entity\wentity.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\hacks\triggerbot.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\classes\bone.hpp">
@@ -147,6 +150,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="src\entity\wentity.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\hacks\triggerbot.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
